removed os specific changes for now to fix scrollbars

--- a/themes/css/paperdark/paper-dark.css
+++ b/themes/css/paperdark/paper-dark.css
@@ -263,3 +263,26 @@ Shell[style~='SWT.MENU'][style~='SWT.TITLE'] Table {
 	swt-selection-border-color: #7F7D68;
 	swt-hot-border-color: #545454;
 }
+
+Tree,
+Table {
+	flat-scroll-bar: true;
+	flat-scroll-bar-background : #292929;
+	flat-scroll-bar-thumb: #7F7D68;
+	flat-scroll-bar-page-increment: #292929;
+	flat-scroll-bar-thumb-top-level: #7F7D68;
+	flat-scroll-bar-page-increment-top-level: #292929;
+	flat-scroll-bar-increment-length: 7;
+}
+
+#IDEWindow Tree,
+#IDEWindow Table,
+#IDEWindow StyledText {
+	flat-scroll-bar: true;
+	flat-scroll-bar-background : #292929;
+	flat-scroll-bar-thumb: #292929;
+	flat-scroll-bar-page-increment: #292929;
+	flat-scroll-bar-thumb-top-level: #00FFFF;
+	flat-scroll-bar-page-increment-top-level: #292929;
+	flat-scroll-bar-increment-length: 7;
+}
